Typo in ioutput

--- a/random-yaml/Pulumi.yaml
+++ b/random-yaml/Pulumi.yaml
@@ -20,7 +20,7 @@ resources:
   stacksettings:
     type: stackmgmt:StackSettings
 outputs: 
-  petName: pet.petName
+  petName: ${pet.petName}
 
 config:
   size:
